examples/errors/parser-superflous-dash-in-range.spcasm
incbin "../binary.bin":2-3-1
